# chess

./: Cargo.toml  build.sh  index.html  readme.md
src/: main.rs
src/bot/: bot1.rs  mod.rs  system.rs
src/camera/: mod.rs  system.rs
src/chessboard/: component.rs  constants.rs  mod.rs  system.rs  utils.rs
src/engine/: chess.rs  constants.rs  mod.rs  system.rs
