[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.1"
phf = { version = "0.11.2", features = ["macros"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
