[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1.13.0"
bevy = "0.14.1"
bevy_async_task = "0.2.0"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
